--- a/pages/globals.css
+++ b/pages/globals.css
@@ -106,6 +106,11 @@ body {
   .accent-appGreen {
     accent-color: #247A84 !important;
   }
+
+  .bg-appGreen {
+    background-color: #16565d; 
+  }
+
   @keyframes clickEffect {
     0% {
       transform: scale(1);
